--- a/index.html
+++ b/index.html
@@ -1362,7 +1362,7 @@ function listsRenderLists() {
         '</div>',
         '<div style="font-family:Jost,sans-serif;font-size:22px;font-weight:700;color:#1C3A4A;margin-bottom:10px;letter-spacing:-0.3px;">No lists yet</div>',
         '<div style="font-family:Jost,sans-serif;font-size:15px;color:#8E9BAA;line-height:1.5;margin-bottom:36px;max-width:220px;">Stay organized \u2014 create your first shopping, to-do, or grocery list.</div>',
-        '<button onclick="listsShowAddList()" style="font-family:Jost,sans-serif;font-size:16px;font-weight:600;color:#fff;background:#14607A;border:none;border-radius:14px;padding:14px 32px;cursor:pointer;display:flex;align-items:center;gap:8px;box-shadow:0 4px 16px rgba(20,96,122,0.28);" ontouchstart="this.style.transform=&quot;scale(0.96)&quot;" ontouchend="this.style.transform=&quot;&quot;">',
+        '<button onclick="listsShowAddList()" style="font-family:Jost,sans-serif;font-size:16px;font-weight:600;color:#fff;background:#14607A;border:none;border-radius:14px;padding:14px 32px;cursor:pointer;display:flex;align-items:center;gap:8px;box-shadow:0 4px 16px rgba(20,96,122,0.28);">',
           '<span style="font-size:20px;line-height:1;">+</span> New List',
         '</button>',
       '</div>'
