--- a/index.html
+++ b/index.html
@@ -1215,20 +1215,13 @@
       <div class="lists-bottom-sheet-overlay" id="listsEditSheetOverlay" onclick="listsCloseEditSheet()"></div>
       <div class="lists-bottom-sheet" id="listsEditSheet" style="padding-bottom:env(safe-area-inset-bottom,16px);">
         <div class="lists-sheet-handle"></div>
-        <div style="font-family:'Jost',sans-serif;padding:0 20px 20px;">
+        <div style="font-family:Jost,sans-serif;padding:0 20px 20px;">
           <div style="font-size:13px;font-weight:600;color:#8E8E93;text-transform:uppercase;letter-spacing:0.5px;margin-bottom:12px;">List Name</div>
           <input class="lists-sheet-input" id="listsEditNameInput" type="text" placeholder="List name" style="margin-bottom:20px;">
           <div style="font-size:13px;font-weight:600;color:#8E8E93;text-transform:uppercase;letter-spacing:0.5px;margin-bottom:12px;">Assigned To</div>
           <div id="listsEditProfileGrid" style="display:flex;flex-wrap:wrap;gap:10px;margin-bottom:24px;"></div>
-          <button onclick="listsSaveEdit()" style="
-            width:100%;font-family:'Jost',sans-serif;font-size:16px;font-weight:600;
-            color:#fff;background:#14607A;border:none;border-radius:14px;
-            padding:15px;cursor:pointer;margin-bottom:10px;
-            box-shadow:0 4px 14px rgba(20,96,122,0.25);">Save Changes</button>
-          <button onclick="listsDeleteList()" style="
-            width:100%;font-family:'Jost',sans-serif;font-size:16px;font-weight:600;
-            color:#C62828;background:#FFF0F0;border:none;border-radius:14px;
-            padding:15px;cursor:pointer;">🗑️ Delete List</button>
+          <button onclick="listsSaveEdit()" style="width:100%;font-family:Jost,sans-serif;font-size:16px;font-weight:600;color:#fff;background:#14607A;border:none;border-radius:14px;padding:15px;cursor:pointer;margin-bottom:10px;box-shadow:0 4px 14px rgba(20,96,122,0.25);">Save Changes</button>
+          <button onclick="listsDeleteList()" style="width:100%;font-family:Jost,sans-serif;font-size:16px;font-weight:600;color:#C62828;background:#FFF0F0;border:none;border-radius:14px;padding:15px;cursor:pointer;">🗑️ Delete List</button>
         </div>
       </div>
 
